src/App.css
*, :after, :before {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  scroll-behavior: smooth;
}

a {
  text-decoration: none;
  color: inherit; 
}

a:visited, a:link {
  color: inherit;
}

.page {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.intro {
  margin-top: 10rem;
}

.left {
  flex: 1;
  max-width: 800px;        /* stays more on the left */
  text-align: center;      /* Center text content */
  transition: all 0.5s ease; /* Smooth transition for all changes */
}

@media (max-width: 1000px) {
  .left {
    max-width: 100%;
  }
}

.left {
  position: relative;
  text-align: center;      /* Center text content */
  transition: all 0.5s ease; /* Smooth transition for all changes */
}

.main-name {
  font-size: 5rem;
  font-family: Andale Mono, monospace;
  text-shadow: 0 15px 15px rgba(0, 0, 0, .2);
}

.right {
  position: fixed;
  top: 0;     /* top and bottom help keeps it covering the whole page vertically*/
  bottom: 0;
  width: 100%; /* Set width to cover the whole page horizontally */
  background-image: url('./images/background.png');
  z-index: -1;
  opacity: .1;
}

/* this is to make more white space after the name so you can only see the name
   at first on smaller screens */
@media (max-width: 800px) {
  .left {
    margin-bottom: 25rem; 
  }
}

.nav-container {
  border-radius: 50%;
  background-color: #ef9218;
  display: flex;  /* helps keep the triangle in the middle*/
  align-items: center;
  justify-content: center; 
  position: fixed;  /* keep the nav button top right */
  right: 2rem;
  top: 1.5rem;
  width: 3.3rem;
  height: 3.3rem;
  z-index: 10;
  transition: background-color 0.3s ease-in-out;
}

@media (max-width: 300px) {
  .nav-container {
    display: none; /* This hides the nav button */
  }
}

.nav-container:hover {
  background-color: #FFDB00;
}

/* this is for the triangle image in nav button */
#_nav-icon {
  max-width: 100%;
  max-height: 100%;
  align-items: center;
  justify-content: center; 
  object-fit: contain;
  transition: transform 0.3s ease, opacity 0.3s ease; /* Smooth transition */
}

/* this is to hide the triangle background since the image is originally a square surrounding
   the triangle so it just hides it */
.dropdown-trigger {
  background: none; 
  border: none; 
  cursor: pointer; 
  display: flex;
  align-items: center; 
  justify-content: center; 
}

.dropdown-trigger:hover #_nav-icon {
  transform: rotate(180deg); 
}

.dropdown-content {
  position: absolute;
  top: 60px;
  left: -75px;
  z-index: 10;
  transform: translateY(-10px); /* used for little sliding down animation */
  visibility: hidden; /* hides the dropdown initially*/
  transition: transform 0.3s ease-out, opacity 0.3s ease-out;
}

.dropdown-content.show {
  transform: translateY(0);
  visibility: visible;
}

.dropdown-content a {
  padding: 10px 15px;
  text-decoration: none; /* removed the underline for <a> tag */
  color: #333;
  font-family: Andale Mono, monospace;;
  border-radius: 8px;
  margin: 5px 0;
  transition: background-color 0.3s, color 0.3s;
  display: block;
}

.dropdown-content a:hover {
  background-color: #ef9218;
  color: #fff;
}

.speech-bubble {
  display: flex;
  flex-direction: column;
  margin-right: 10rem;
  background-color: #fff; 
  border-radius: 10px; 
  padding: 20px;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); 
}

/* Creates the triangle tip */
.speech-bubble::after {
  content: '';
  position: absolute;
  bottom: 100%; 
  left: 103px; 
  margin-left: -5px; 
  border-width: 5px; 
  border-style: solid;
  border-color: transparent transparent #fff transparent;
}

.resume-button {
  padding: .8rem 3rem;
  border: none;
  border-radius: 10rem;
  background-color: #ef9218;
  font-family: Andale Mono, monospace;
  text-transform: uppercase;
  transition: background-color 0.3s ease-in-out;
  box-shadow: 0 15px 15px rgba(0, 0, 0, .16);
}

.resume-button:hover {
  background-color: #FFDB00;
}
                                            /* ABOUT */
.about-section {
  margin-right: 90px;
}

.about-me {
  display: flex;  
}

.about-me-p{
  display: flex;
  flex-direction: column;
  font-family: Andale Mono, monospace !important;
  min-width: 300px;
}

                                              /* PROJECTS */
.project-main {
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: 100%;
}

.project-container {
  width: 100%;
  background-color: #f4f4f4;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-sizing: border-box; /* Ensures padding is included in the element's size */
  text-align: center;
  gap: 20px;
  min-width: 300px;
}

.project-container:hover {
  background-color: #e0e0e0;
  transform: translate(5px, -5px); /* Moves 5px right and 5px up diagonally */
  transition: transform 0.3s ease;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}

.project-link {
  text-decoration: none; /* Remove underline */
  color: inherit;
}

.project-container h5 {
  font-size: 1.5rem;
}

.project p {
  font-size: 1rem;
}

.tech-used {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10px;
}

.tech-tag {
  color:white;
  background-color: #756c6c;
  padding: 5px 10px;
  border-radius: 5px;
  font-size: 0.9rem;
}

                                                  /* FOOTER */
.footer {
  background-color: #e0e0e0;
  color: black;
  text-align: center;
  padding: 20px 0;
  display: flex;
  justify-content: center;
  align-items: center;
  white-space: nowrap;
  font-family: Andale Mono, monospace;
  font-size: 0.9rem;
  box-sizing: border-box;
  min-width: 500px;
}

.footer a {
  text-decoration: none;
  color: inherit;
}

@media (max-width: 600px) {
  .footer {
    font-size: 80%;
    padding: 10px 0;
  }

}

/* commonly used */
.heading-5 {
  font-size: .9rem;
  letter-spacing: 3px;
  text-transform: uppercase;
}

.heading-4 {
  letter-spacing: 5px;
  text-transform: uppercase;
}

.primary-c {
  color: #ef9218;
}

.upper-c {
  text-transform: uppercase;
}

.mt-s {
  margin-top: 1rem;
}

.mt-l {
  margin-top: 2rem;
}

.mt-ll {
  margin-top: 18rem;
}

.mb-s {
  margin-bottom: 1.3rem;
}

.mb-ss {
  margin-bottom: 9px;
}

.mb-l {
  margin-bottom: 3rem;
}

.mb-ll {
  margin-bottom: 25rem;
}

.ml-s {
  margin-left: 5rem;
}

.ml-ss {
  margin-left: 3rem;
}

.mr-ss {
  margin-right: 2rem;
}

.mr-s {
  margin-right: 4rem;
}

.mr-l {
  margin-right: 10rem;
}

.font-s {
  font-size: .8rem;
}

.sec-color {
  color: #756c6c;
}

.main-font {
  font-family: Andale Mono, monospace;
}

